TGR-1375: Implement SMTP command parsing